# realitylauncher-client

./: .env.example  .env.local  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  astro.config.mjs  b64.txt  build-dist.ps1  debug-appdata.js  debug-cf.js  debug-deep.js  debug-instances.js  debug-native.js  debug-neoforge.ts  debug_modrinth.js  debug_translations.py  fetch_mod.js  inspect_mclc.js  java_handler.json  mod.md  package-lock.json  package.json  test_modrinth.cjs  test_modrinth.js  test_modrinth.json  tsconfig.json
.agent/workflows/: api.md  build.md  dev.md  fullstack.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
docs/: README.md  gitlab-auto-deploy.md  release-flatpak-msstore.md
native/: Cargo.toml  build_log.txt  compile_log.txt  compile_short.txt  index.cjs  index.d.ts  index.js  output.txt  package-lock.json  package.json
native/src/: lib.rs
native/src/api/: curseforge.rs  mod.rs  modrinth.rs
native/src/download/: mod.rs  packs.rs  size_guard_tests.rs
native/src/extract/: mod.rs
native/src/fabric/: mod.rs
native/src/forge/: mod.rs
native/src/instance/: mod.rs
native/src/java/: mod.rs
native/src/launcher/: mod.rs
native/src/quilt/: mod.rs
scripts/: build-msixupload.cjs  check-no-app-asar-writes.cjs  check-release-workflow.cjs  find_dup_keys.js  run-electron.cjs
src/: env.d.ts
tools/: find-babel-syntax-error.js  test-instance-dedupe.cjs
(+191 files in other folders)
